LB-1084: Fix tooltip visibility over YouTube Player

--- a/listenbrainz/webserver/static/css/brainzplayer.less
+++ b/listenbrainz/webserver/static/css/brainzplayer.less
@@ -73,7 +73,7 @@
 				height: @youtube-player-height + @youtube-drag-handle-size;
 				width: @youtube-player-width;
 				max-width: calc(100vw - 20px);
-				z-index: 10;
+				z-index: 4;
 				
 				.youtube-player{
 					height: @youtube-player-height;
@@ -240,7 +240,7 @@
     	left: 0;
 		width: 100%;
 		cursor: pointer;
-		z-index: 2;
+		z-index: 5;
 		transition: height, 0.2s;
 		
 		.progress-bar {
